--- a/src/style/responsive.css
+++ b/src/style/responsive.css
@@ -18,9 +18,9 @@
 
     #landing-page .typhography {
         font-size: 30vw !important;
-    }w
+    }
 
-    #about-me-page .flex-1,
+    w #about-me-page .flex-1,
     .flex-2,
     .flex-3 {
         height: max-content;
@@ -31,6 +31,21 @@
         padding: 0 var(--medium);
         /* padding-right: none; */
     }
+
+    #gallery-content .divider {
+        width: 100%;
+        flex: auto;
+        height: max-content;
+    }
+
+    #gallery-content .divider:nth-child(1) {
+        align-items: end;
+    }
+
+    #gallery-content .divider:nth-child(2) {
+        align-items: start;
+    }
+
 }
 
 @media screen and (min-width: 1080px) {}
